--- a/portfolio.html
+++ b/portfolio.html
@@ -177,31 +177,33 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="logo-link link" href="./index.html" lang="en"
-        ><span class="logo-accent">Web</span>Studio</a
-      >
-      <address>
-        <ul class="footer-address-list list">
-          <li>
-            <a
-              class="footer-address-item map-position link"
-              href="https://goo.gl/maps/ELRzLiQ2vCGN3Ftp9"
-              target="_blank"
-              rel="noopener noreferrer nofollow"
-            >
-              м. Київ, пр-т Лесі Українки, 26
-            </a>
-          </li>
-          <li>
-            <a class="footer-address-item link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="footer-address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="logo-link link" href="./index.html" lang="en"
+          ><span class="logo-accent">Web</span>Studio</a
+        >
+        <address>
+          <ul class="footer-address-list list">
+            <li>
+              <a
+                class="footer-address-item map-position link"
+                href="https://goo.gl/maps/ELRzLiQ2vCGN3Ftp9"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                м. Київ, пр-т Лесі Українки, 26
+              </a>
+            </li>
+            <li>
+              <a class="footer-address-item link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="footer-address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
