--- a/index.html
+++ b/index.html
@@ -39,10 +39,20 @@
         </nav>
         <ul class="header-list list">
           <li class="header-list-item">
-            <a class="header-list-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="header-list-link link" href="mailto:info@devstudio.com">
+              <svg class="header-list-icon" width="16" height="16">
+                <use href="./images/icon-sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li class="header-list-item">
-            <a class="header-list-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="header-list-link link" href="tel:+380961111111">
+              <svg class="header-list-icon" width="10" height="16">
+                <use href="./images/icon-sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -50,9 +60,11 @@
     <main>
       <!-- Ефективні рішення для вашого бізнесу -->
       <section class="hero-section section">
-        <div class="fcontainer">
-          <h1 class="hero-title title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="hero-btn" type="button">Замовити послугу</button>
+        <div class="hero-wrap">
+          <div class="container">
+            <h1 class="hero-title title">Ефективні рішення для вашого бізнесу</h1>
+            <button class="hero-btn" type="button">Замовити послугу</button>
+          </div>
         </div>
       </section>
       <!-- Наші особливості -->
@@ -61,24 +73,44 @@
           <h2 class="visually-hidden">Наші особливості</h2>
           <ul class="feature-list list">
             <li class="feature-item">
+              <div class="feature-rectangle">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/icon-sprite.svg#icon-first-feature"></use>
+                </svg>
+              </div>
               <h3 class="feature-title title">Увага до деталей</h3>
               <p class="feature-text">
                 Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-rectangle">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/icon-sprite.svg#icon-second-feature"></use>
+                </svg>
+              </div>
               <h3 class="feature-title title">Пунктуальність</h3>
               <p class="feature-text">
                 Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-rectangle">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/icon-sprite.svg#icon-third-feature"></use>
+                </svg>
+              </div>
               <h3 class="feature-title title">Планування</h3>
               <p class="feature-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="feature-item">
+              <div class="feature-rectangle">
+                <svg class="feature-icon" width="70" height="70">
+                  <use href="./images/icon-sprite.svg#icon-fourth-feature"></use>
+                </svg>
+              </div>
               <h3 class="feature-title title">Сучасні технології</h3>
               <p class="feature-text">
                 Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -137,6 +169,48 @@
               <div class="team-member-description">
                 <h3 class="team-member-name title">Ігор Дем'яненко</h3>
                 <p class="member-job-position" lang="en">Product Designer</p>
+                <ul class="member-soc-list list">
+                  <li class="member-soc-item">
+                    <a
+                      href=""
+                      class="member-soc-link link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      ><svg class="member-soc-icon" width="20" height="20">
+                        <use href="./images/icon-sprite.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="member-soc-item">
+                    <a
+                      href=""
+                      class="member-soc-link link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      ><svg class="member-soc-icon" width="20" height="20">
+                        <use href="./images/icon-sprite.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="member-soc-item">
+                    <a
+                      href=""
+                      class="member-soc-link link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      ><svg class="member-soc-icon" width="20" height="20">
+                        <use href="./images/icon-sprite.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="member-soc-item">
+                    <a
+                      href=""
+                      class="member-soc-link link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      ><svg class="member-soc-icon" width="20" height="20">
+                        <use href="./images/icon-sprite.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -149,6 +223,48 @@
               <div class="team-member-description">
                 <h3 class="team-member-name title">Ольга Рєпіна</h3>
                 <p class="member-job-position" lang="en">Frontend Developer</p>
+                <ul class="member-soc-list list">
+                  <li class="member-soc-item">
+                    <a
+                      href=""
+                      class="member-soc-link link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      ><svg class="member-soc-icon" width="20" height="20">
+                        <use href="./images/icon-sprite.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="member-soc-item">
+                    <a
+                      href=""
+                      class="member-soc-link link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      ><svg class="member-soc-icon" width="20" height="20">
+                        <use href="./images/icon-sprite.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="member-soc-item">
+                    <a
+                      href=""
+                      class="member-soc-link link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      ><svg class="member-soc-icon" width="20" height="20">
+                        <use href="./images/icon-sprite.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="member-soc-item">
+                    <a
+                      href=""
+                      class="member-soc-link link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      ><svg class="member-soc-icon" width="20" height="20">
+                        <use href="./images/icon-sprite.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -161,6 +277,48 @@
               <div class="team-member-description">
                 <h3 class="team-member-name title">Микола Тарасов</h3>
                 <p class="member-job-position" lang="en">Marketing</p>
+                <ul class="member-soc-list list">
+                  <li class="member-soc-item">
+                    <a
+                      href=""
+                      class="member-soc-link link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      ><svg class="member-soc-icon" width="20" height="20">
+                        <use href="./images/icon-sprite.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="member-soc-item">
+                    <a
+                      href=""
+                      class="member-soc-link link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      ><svg class="member-soc-icon" width="20" height="20">
+                        <use href="./images/icon-sprite.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="member-soc-item">
+                    <a
+                      href=""
+                      class="member-soc-link link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      ><svg class="member-soc-icon" width="20" height="20">
+                        <use href="./images/icon-sprite.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="member-soc-item">
+                    <a
+                      href=""
+                      class="member-soc-link link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      ><svg class="member-soc-icon" width="20" height="20">
+                        <use href="./images/icon-sprite.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -175,7 +333,129 @@
                 <p class="member-job-position" lang="en">
                   <abbr class="abbreviation" title="User interface">UI</abbr> Designer
                 </p>
+                <ul class="member-soc-list list">
+                  <li class="member-soc-item">
+                    <a
+                      href=""
+                      class="member-soc-link link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      ><svg class="member-soc-icon" width="20" height="20">
+                        <use href="./images/icon-sprite.svg#icon-instagram"></use></svg
+                    ></a>
+                  </li>
+                  <li class="member-soc-item">
+                    <a
+                      href=""
+                      class="member-soc-link link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      ><svg class="member-soc-icon" width="20" height="20">
+                        <use href="./images/icon-sprite.svg#icon-twitter"></use></svg
+                    ></a>
+                  </li>
+                  <li class="member-soc-item">
+                    <a
+                      href=""
+                      class="member-soc-link link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      ><svg class="member-soc-icon" width="20" height="20">
+                        <use href="./images/icon-sprite.svg#icon-facebook"></use></svg
+                    ></a>
+                  </li>
+                  <li class="member-soc-item">
+                    <a
+                      href=""
+                      class="member-soc-link link"
+                      target="_blank"
+                      rel="noopener noreferrer nofollow"
+                      ><svg class="member-soc-icon" width="20" height="20">
+                        <use href="./images/icon-sprite.svg#icon-linkedin"></use></svg
+                    ></a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- Постійні клієнти -->
+      <section class="section">
+        <div class="container">
+          <h2 class="section-title title">Постійні Клієнти</h2>
+          <ul class="regularclients-list list">
+            <li class="regularclients-item">
+              <a
+                href=""
+                class="regularclients-link link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="regularclients-icon" width="106" height="60">
+                  <use href="./images/icon-sprite.svg#icon-first-client-logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="regularclients-item">
+              <a
+                href=""
+                class="regularclients-link link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="regularclients-icon" width="106" height="60">
+                  <use href="./images/icon-sprite.svg#icon-second-client-logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="regularclients-item" width="106" height="60">
+              <a
+                href=""
+                class="regularclients-link link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="regularclients-icon" width="106" height="60">
+                  <use href="./images/icon-sprite.svg#icon-third-client-logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="regularclients-item">
+              <a
+                href=""
+                class="regularclients-link link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="regularclients-icon" width="106" height="60">
+                  <use href="./images/icon-sprite.svg#icon-fourth-client-logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="regularclients-item">
+              <a
+                href=""
+                class="regularclients-link link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="regularclients-icon" width="106" height="60">
+                  <use href="./images/icon-sprite.svg#icon-fifth-client-logo"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="regularclients-item">
+              <a
+                href=""
+                class="regularclients-link link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+              >
+                <svg class="regularclients-icon" width="106" height="60">
+                  <use href="./images/icon-sprite.svg#icon-sixth-client-logo"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
