--- a/index.html
+++ b/index.html
@@ -169,44 +169,44 @@
               <div class="team-member-description">
                 <h3 class="team-member-name title">Ігор Дем'яненко</h3>
                 <p class="member-job-position" lang="en">Product Designer</p>
-                <ul class="member-soc-list list">
-                  <li class="member-soc-item">
+                <ul class="member-soc-list soc-list list">
+                  <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link link"
+                      class="member-soc-link soc-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      ><svg class="member-soc-icon" width="20" height="20">
+                      ><svg class="member-soc-icon soc-icon" width="20" height="20">
                         <use href="./images/icon-sprite.svg#icon-instagram"></use></svg
                     ></a>
                   </li>
-                  <li class="member-soc-item">
+                  <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link link"
+                      class="member-soc-link soc-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      ><svg class="member-soc-icon" width="20" height="20">
+                      ><svg class="member-soc-icon soc-icon" width="20" height="20">
                         <use href="./images/icon-sprite.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
-                  <li class="member-soc-item">
+                  <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link link"
+                      class="member-soc-link soc-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      ><svg class="member-soc-icon" width="20" height="20">
+                      ><svg class="member-soc-icon soc-icon" width="20" height="20">
                         <use href="./images/icon-sprite.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
-                  <li class="member-soc-item">
+                  <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link link"
+                      class="member-soc-link soc-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      ><svg class="member-soc-icon" width="20" height="20">
+                      ><svg class="member-soc-icon soc-icon" width="20" height="20">
                         <use href="./images/icon-sprite.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -223,44 +223,44 @@
               <div class="team-member-description">
                 <h3 class="team-member-name title">Ольга Рєпіна</h3>
                 <p class="member-job-position" lang="en">Frontend Developer</p>
-                <ul class="member-soc-list list">
-                  <li class="member-soc-item">
+                <ul class="member-soc-list soc-list list">
+                  <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link link"
+                      class="member-soc-link soc-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      ><svg class="member-soc-icon" width="20" height="20">
+                      ><svg class="member-soc-icon soc-icon" width="20" height="20">
                         <use href="./images/icon-sprite.svg#icon-instagram"></use></svg
                     ></a>
                   </li>
-                  <li class="member-soc-item">
+                  <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link link"
+                      class="member-soc-link soc-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      ><svg class="member-soc-icon" width="20" height="20">
+                      ><svg class="member-soc-icon soc-icon" width="20" height="20">
                         <use href="./images/icon-sprite.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
-                  <li class="member-soc-item">
+                  <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link link"
+                      class="member-soc-link soc-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      ><svg class="member-soc-icon" width="20" height="20">
+                      ><svg class="member-soc-icon soc-icon" width="20" height="20">
                         <use href="./images/icon-sprite.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
-                  <li class="member-soc-item">
+                  <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link link"
+                      class="member-soc-link soc-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      ><svg class="member-soc-icon" width="20" height="20">
+                      ><svg class="member-soc-icon soc-icon" width="20" height="20">
                         <use href="./images/icon-sprite.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -277,44 +277,44 @@
               <div class="team-member-description">
                 <h3 class="team-member-name title">Микола Тарасов</h3>
                 <p class="member-job-position" lang="en">Marketing</p>
-                <ul class="member-soc-list list">
-                  <li class="member-soc-item">
+                <ul class="member-soc-list soc-list list">
+                  <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link link"
+                      class="member-soc-link soc-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      ><svg class="member-soc-icon" width="20" height="20">
+                      ><svg class="member-soc-icon soc-icon" width="20" height="20">
                         <use href="./images/icon-sprite.svg#icon-instagram"></use></svg
                     ></a>
                   </li>
-                  <li class="member-soc-item">
+                  <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link link"
+                      class="member-soc-link soc-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      ><svg class="member-soc-icon" width="20" height="20">
+                      ><svg class="member-soc-icon soc-icon" width="20" height="20">
                         <use href="./images/icon-sprite.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
-                  <li class="member-soc-item">
+                  <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link link"
+                      class="member-soc-link soc-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      ><svg class="member-soc-icon" width="20" height="20">
+                      ><svg class="member-soc-icon soc-icon" width="20" height="20">
                         <use href="./images/icon-sprite.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
-                  <li class="member-soc-item">
+                  <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link link"
+                      class="member-soc-link soc-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      ><svg class="member-soc-icon" width="20" height="20">
+                      ><svg class="member-soc-icon soc-icon" width="20" height="20">
                         <use href="./images/icon-sprite.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -333,44 +333,44 @@
                 <p class="member-job-position" lang="en">
                   <abbr class="abbreviation" title="User interface">UI</abbr> Designer
                 </p>
-                <ul class="member-soc-list list">
-                  <li class="member-soc-item">
+                <ul class="member-soc-list soc-list list">
+                  <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link link"
+                      class="member-soc-link soc-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      ><svg class="member-soc-icon" width="20" height="20">
+                      ><svg class="member-soc-icon soc-icon" width="20" height="20">
                         <use href="./images/icon-sprite.svg#icon-instagram"></use></svg
                     ></a>
                   </li>
-                  <li class="member-soc-item">
+                  <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link link"
+                      class="member-soc-link soc-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      ><svg class="member-soc-icon" width="20" height="20">
+                      ><svg class="member-soc-icon soc-icon" width="20" height="20">
                         <use href="./images/icon-sprite.svg#icon-twitter"></use></svg
                     ></a>
                   </li>
-                  <li class="member-soc-item">
+                  <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link link"
+                      class="member-soc-link soc-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      ><svg class="member-soc-icon" width="20" height="20">
+                      ><svg class="member-soc-icon soc-icon" width="20" height="20">
                         <use href="./images/icon-sprite.svg#icon-facebook"></use></svg
                     ></a>
                   </li>
-                  <li class="member-soc-item">
+                  <li class="member-soc-item soc-item">
                     <a
                       href=""
-                      class="member-soc-link link"
+                      class="member-soc-link soc-link link"
                       target="_blank"
                       rel="noopener noreferrer nofollow"
-                      ><svg class="member-soc-icon" width="20" height="20">
+                      ><svg class="member-soc-icon soc-icon" width="20" height="20">
                         <use href="./images/icon-sprite.svg#icon-linkedin"></use></svg
                     ></a>
                   </li>
@@ -463,31 +463,80 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo-link link" href="./index.html" lang="en"
-          ><span class="logo-accent">Web</span>Studio</a
-        >
-        <address>
-          <ul class="footer-address-list list">
-            <li>
-              <a
-                class="footer-address-item map-position link"
-                href="https://goo.gl/maps/ELRzLiQ2vCGN3Ftp9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                м. Київ, пр-т Лесі Українки, 26
-              </a>
-            </li>
-            <li>
-              <a class="footer-address-item link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="footer-address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+        <ul class="footer-wrap list">
+          <li class="footer-first-column">
+            <a class="logo-link link" href="./index.html" lang="en"
+              ><span class="logo-accent">Web</span>Studio</a
+            >
+            <address>
+              <ul class="footer-address-list list">
+                <li>
+                  <a
+                    class="footer-address-item map-position link"
+                    href="https://goo.gl/maps/ELRzLiQ2vCGN3Ftp9"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                  >
+                    м. Київ, пр-т Лесі Українки, 26
+                  </a>
+                </li>
+                <li>
+                  <a class="footer-address-item link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li>
+                  <a class="footer-address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </li>
+          <li class="footer-second-column">
+            <h2 class="footer-join-title">Приєднуйтесь</h2>
+            <ul class="footer-soc-list soc-list list">
+              <li class="footer-soc-item soc-item">
+                <a
+                  href=""
+                  class="footer-soc-link soc-link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  ><svg class="footer-soc-icon soc-icon" width="20" height="20">
+                    <use href="./images/icon-sprite.svg#icon-instagram"></use></svg
+                ></a>
+              </li>
+              <li class="footer-soc-item soc-item">
+                <a
+                  href=""
+                  class="footer-soc-link soc-link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  ><svg class="footer-soc-icon soc-icon" width="20" height="20">
+                    <use href="./images/icon-sprite.svg#icon-twitter"></use></svg
+                ></a>
+              </li>
+              <li class="footer-soc-item soc-item">
+                <a
+                  href=""
+                  class="footer-soc-link soc-link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  ><svg class="footer-soc-icon soc-icon" width="20" height="20">
+                    <use href="./images/icon-sprite.svg#icon-facebook"></use></svg
+                ></a>
+              </li>
+              <li class="footer-soc-item soc-item">
+                <a
+                  href=""
+                  class="footer-soc-link soc-link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  ><svg class="footer-soc-icon soc-icon" width="20" height="20">
+                    <use href="./images/icon-sprite.svg#icon-linkedin"></use></svg
+                ></a>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
