--- a/portfolio.html
+++ b/portfolio.html
@@ -39,10 +39,20 @@
         </nav>
         <ul class="header-list list">
           <li class="header-list-item">
-            <a class="header-list-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="header-list-link link" href="mailto:info@devstudio.com">
+              <svg class="header-list-icon" width="16" height="16">
+                <use href="./images/icon-sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com</a
+            >
           </li>
           <li class="header-list-item">
-            <a class="header-list-link link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="header-list-link link" href="tel:+380961111111">
+              <svg class="header-list-icon" width="10" height="16">
+                <use href="./images/icon-sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -54,123 +64,150 @@
           <h1 class="visually-hidden">Портфоліо</h1>
           <ul class="filter-list list">
             <li class="filter-item">
-              <button class="filter-btn" type="button">Усі</button>
+              <button class="filter-btn btn" type="button">Усі</button>
             </li>
             <li class="filter-item">
-              <button class="filter-btn" type="button">Веб-сайти</button>
+              <button class="filter-btn btn" type="button">Веб-сайти</button>
             </li>
             <li class="filter-item">
-              <button class="filter-btn" type="button">Додатки</button>
+              <button class="filter-btn btn" type="button">Додатки</button>
             </li>
             <li class="filter-item">
-              <button class="filter-btn" type="button">Дизайн</button>
+              <button class="filter-btn btn" type="button">Дизайн</button>
             </li>
             <li class="filter-item">
-              <button class="filter-btn" type="button">Маркетинг</button>
+              <button class="filter-btn btn" type="button">Маркетинг</button>
             </li>
           </ul>
           <ul class="portfolio-list list">
             <li class="portfolio-card">
-              <img
-                src="./images/portfolio-img-1.jpg"
-                alt="демонстрація сайту на ноутбуці"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card-description">
-                <h2 class="portfolio-card-title title">Технокряк</h2>
-                <p class="portfolio-card-text">Веб-сайт</p>
-              </div>
+              <a href="" class="portfolio-card-link link">
+                <img
+                  src="./images/portfolio-img-1.jpg"
+                  alt="демонстрація сайту на ноутбуці"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-description">
+                  <h2 class="portfolio-card-title title">Технокряк</h2>
+                  <p class="portfolio-card-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/portfolio-img-2.jpg"
-                alt="постер команди"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card-description">
-                <h2 class="portfolio-card-title title">
-                  Постер <span lang="en">New Orlean vs Golden Star</span>
-                </h2>
-                <p class="portfolio-card-text">Дизайн</p>
-              </div>
+              <a href="" class="portfolio-card-link link">
+                <img
+                  src="./images/portfolio-img-2.jpg"
+                  alt="постер команди"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-description">
+                  <h2 class="portfolio-card-title title">
+                    Постер <span lang="en">New Orlean vs Golden Star</span>
+                  </h2>
+                  <p class="portfolio-card-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/portfolio-img-3.jpg"
-                alt="логотип ресторану"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card-description">
-                <h2 class="portfolio-card-title title">Ресторан <span lang="en">Seafood</span></h2>
-                <p class="portfolio-card-text">Додаток</p>
-              </div>
+              <a href="" class="portfolio-card-link link">
+                <img
+                  src="./images/portfolio-img-3.jpg"
+                  alt="логотип ресторану"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-description">
+                  <h2 class="portfolio-card-title title">
+                    Ресторан <span lang="en">Seafood</span>
+                  </h2>
+                  <p class="portfolio-card-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img src="./images/portfolio-img-4.jpg" alt="навушники" width="370" height="294" />
-              <div class="portfolio-card-description">
-                <h2 class="portfolio-card-title title">Проєкт <span lang="en">Prime</span></h2>
-                <p class="portfolio-card-text">Маркетинг</p>
-              </div>
+              <a href="" class="portfolio-card-link link">
+                <img src="./images/portfolio-img-4.jpg" alt="навушники" width="370" height="294" />
+                <div class="portfolio-card-description">
+                  <h2 class="portfolio-card-title title">Проєкт <span lang="en">Prime</span></h2>
+                  <p class="portfolio-card-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img src="./images/portfolio-img-5.jpg" alt="дві коробки" width="370" height="294" />
-              <div class="portfolio-card-description">
-                <h2 class="portfolio-card-title title">Проєкт <span lang="en">Boxes</span></h2>
-                <p class="portfolio-card-text">Додаток</p>
-              </div>
+              <a href="" class="portfolio-card-link link">
+                <img
+                  src="./images/portfolio-img-5.jpg"
+                  alt="дві коробки"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-description">
+                  <h2 class="portfolio-card-title title">Проєкт <span lang="en">Boxes</span></h2>
+                  <p class="portfolio-card-text">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/portfolio-img-6.jpg"
-                alt="демонстрація сайту на екрані компʼютера"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card-description">
-                <h2 class="portfolio-card-title title">
-                  <span lang="en">Inspiration has no Borders</span>
-                </h2>
-                <p class="portfolio-card-text">Веб-сайт</p>
-              </div>
+              <a href="" class="portfolio-card-link link">
+                <img
+                  src="./images/portfolio-img-6.jpg"
+                  alt="демонстрація сайту на екрані компʼютера"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-description">
+                  <h2 class="portfolio-card-title title">
+                    <span lang="en">Inspiration has no Borders</span>
+                  </h2>
+                  <p class="portfolio-card-text">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/portfolio-img-7.jpg"
-                alt="розгорнутий журнал"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card-description">
-                <h2 class="portfolio-card-title title">Видання <span>Limited Edition</span></h2>
-                <p class="portfolio-card-text">Дизайн</p>
-              </div>
+              <a href="" class="portfolio-card-link link">
+                <img
+                  src="./images/portfolio-img-7.jpg"
+                  alt="розгорнутий журнал"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-description">
+                  <h2 class="portfolio-card-title title">Видання <span>Limited Edition</span></h2>
+                  <p class="portfolio-card-text">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/portfolio-img-8.jpg"
-                alt="бейдж з картону"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card-description">
-                <h2 class="portfolio-card-title title">Проєкт <span lang="en">LAB</span></h2>
-                <p class="portfolio-card-text">Маркетинг</p>
-              </div>
+              <a href="" class="portfolio-card-link link">
+                <img
+                  src="./images/portfolio-img-8.jpg"
+                  alt="бейдж з картону"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-description">
+                  <h2 class="portfolio-card-title title">Проєкт <span lang="en">LAB</span></h2>
+                  <p class="portfolio-card-text">Маркетинг</p>
+                </div>
+              </a>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/portfolio-img-9.jpg"
-                alt="демонстрація додатку на ноутбуці"
-                width="370"
-                height="294"
-              />
-              <div class="portfolio-card-description">
-                <h2 class="portfolio-card-title title"><span lang="en">Growing Business</span></h2>
-                <p class="portfolio-card-text">Додаток</p>
-              </div>
+              <a href="" class="portfolio-card-link link">
+                <img
+                  src="./images/portfolio-img-9.jpg"
+                  alt="демонстрація додатку на ноутбуці"
+                  width="370"
+                  height="294"
+                />
+                <div class="portfolio-card-description">
+                  <h2 class="portfolio-card-title title">
+                    <span lang="en">Growing Business</span>
+                  </h2>
+                  <p class="portfolio-card-text">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
@@ -178,31 +215,80 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="logo-link link" href="./index.html" lang="en"
-          ><span class="logo-accent">Web</span>Studio</a
-        >
-        <address>
-          <ul class="footer-address-list list">
-            <li>
-              <a
-                class="footer-address-item map-position link"
-                href="https://goo.gl/maps/ELRzLiQ2vCGN3Ftp9"
-                target="_blank"
-                rel="noopener noreferrer nofollow"
-              >
-                м. Київ, пр-т Лесі Українки, 26
-              </a>
-            </li>
-            <li>
-              <a class="footer-address-item link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="footer-address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+        <ul class="footer-wrap list">
+          <li class="footer-first-column">
+            <a class="logo-link link" href="./index.html" lang="en"
+              ><span class="logo-accent">Web</span>Studio</a
+            >
+            <address>
+              <ul class="footer-address-list list">
+                <li>
+                  <a
+                    class="footer-address-item map-position link"
+                    href="https://goo.gl/maps/ELRzLiQ2vCGN3Ftp9"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                  >
+                    м. Київ, пр-т Лесі Українки, 26
+                  </a>
+                </li>
+                <li>
+                  <a class="footer-address-item link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li>
+                  <a class="footer-address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+              </ul>
+            </address>
+          </li>
+          <li class="footer-second-column">
+            <h2 class="footer-join-title">Приєднуйтесь</h2>
+            <ul class="footer-soc-list soc-list list">
+              <li class="footer-soc-item soc-item">
+                <a
+                  href=""
+                  class="footer-soc-link soc-link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  ><svg class="footer-soc-icon soc-icon" width="20" height="20">
+                    <use href="./images/icon-sprite.svg#icon-instagram"></use></svg
+                ></a>
+              </li>
+              <li class="footer-soc-item soc-item">
+                <a
+                  href=""
+                  class="footer-soc-link soc-link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  ><svg class="footer-soc-icon soc-icon" width="20" height="20">
+                    <use href="./images/icon-sprite.svg#icon-twitter"></use></svg
+                ></a>
+              </li>
+              <li class="footer-soc-item soc-item">
+                <a
+                  href=""
+                  class="footer-soc-link soc-link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  ><svg class="footer-soc-icon soc-icon" width="20" height="20">
+                    <use href="./images/icon-sprite.svg#icon-facebook"></use></svg
+                ></a>
+              </li>
+              <li class="footer-soc-item soc-item">
+                <a
+                  href=""
+                  class="footer-soc-link soc-link link"
+                  target="_blank"
+                  rel="noopener noreferrer nofollow"
+                  ><svg class="footer-soc-icon soc-icon" width="20" height="20">
+                    <use href="./images/icon-sprite.svg#icon-linkedin"></use></svg
+                ></a>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
