recreate footer structure

--- a/portfolio.html
+++ b/portfolio.html
@@ -215,80 +215,78 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <ul class="footer-wrap list">
-          <li class="footer-first-column">
-            <a class="logo-link link" href="./index.html" lang="en"
-              ><span class="logo-accent">Web</span>Studio</a
-            >
-            <address>
-              <ul class="footer-address-list list">
-                <li>
-                  <a
-                    class="footer-address-item map-position link"
-                    href="https://goo.gl/maps/ELRzLiQ2vCGN3Ftp9"
-                    target="_blank"
-                    rel="noopener noreferrer nofollow"
-                  >
-                    м. Київ, пр-т Лесі Українки, 26
-                  </a>
-                </li>
-                <li>
-                  <a class="footer-address-item link" href="mailto:info@devstudio.com"
-                    >info@devstudio.com</a
-                  >
-                </li>
-                <li>
-                  <a class="footer-address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-              </ul>
-            </address>
-          </li>
-          <li class="footer-second-column">
-            <h2 class="footer-join-title">Приєднуйтесь</h2>
-            <ul class="footer-soc-list soc-list list">
-              <li class="footer-soc-item soc-item">
+        <div class="footer-first-column">
+          <a class="logo-link link" href="./index.html" lang="en"
+            ><span class="logo-accent">Web</span>Studio</a
+          >
+          <address>
+            <ul class="footer-address-list list">
+              <li>
                 <a
-                  href=""
-                  class="footer-soc-link soc-link link"
+                  class="footer-address-item map-position link"
+                  href="https://goo.gl/maps/ELRzLiQ2vCGN3Ftp9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
-                  ><svg class="footer-soc-icon soc-icon" width="20" height="20">
-                    <use href="./images/icon-sprite.svg#icon-instagram"></use></svg
-                ></a>
+                >
+                  м. Київ, пр-т Лесі Українки, 26
+                </a>
               </li>
-              <li class="footer-soc-item soc-item">
-                <a
-                  href=""
-                  class="footer-soc-link soc-link link"
-                  target="_blank"
-                  rel="noopener noreferrer nofollow"
-                  ><svg class="footer-soc-icon soc-icon" width="20" height="20">
-                    <use href="./images/icon-sprite.svg#icon-twitter"></use></svg
-                ></a>
+              <li>
+                <a class="footer-address-item link" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
               </li>
-              <li class="footer-soc-item soc-item">
-                <a
-                  href=""
-                  class="footer-soc-link soc-link link"
-                  target="_blank"
-                  rel="noopener noreferrer nofollow"
-                  ><svg class="footer-soc-icon soc-icon" width="20" height="20">
-                    <use href="./images/icon-sprite.svg#icon-facebook"></use></svg
-                ></a>
-              </li>
-              <li class="footer-soc-item soc-item">
-                <a
-                  href=""
-                  class="footer-soc-link soc-link link"
-                  target="_blank"
-                  rel="noopener noreferrer nofollow"
-                  ><svg class="footer-soc-icon soc-icon" width="20" height="20">
-                    <use href="./images/icon-sprite.svg#icon-linkedin"></use></svg
-                ></a>
+              <li>
+                <a class="footer-address-item link" href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
-          </li>
-        </ul>
+          </address>
+        </div>
+        <div class="footer-second-column">
+          <h2 class="footer-join-title">Приєднуйтесь</h2>
+          <ul class="footer-soc-list soc-list list">
+            <li class="footer-soc-item soc-item">
+              <a
+                href=""
+                class="footer-soc-link soc-link link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                ><svg class="footer-soc-icon soc-icon" width="20" height="20">
+                  <use href="./images/icon-sprite.svg#icon-instagram"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-item soc-item">
+              <a
+                href=""
+                class="footer-soc-link soc-link link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                ><svg class="footer-soc-icon soc-icon" width="20" height="20">
+                  <use href="./images/icon-sprite.svg#icon-twitter"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-item soc-item">
+              <a
+                href=""
+                class="footer-soc-link soc-link link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                ><svg class="footer-soc-icon soc-icon" width="20" height="20">
+                  <use href="./images/icon-sprite.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="footer-soc-item soc-item">
+              <a
+                href=""
+                class="footer-soc-link soc-link link"
+                target="_blank"
+                rel="noopener noreferrer nofollow"
+                ><svg class="footer-soc-icon soc-icon" width="20" height="20">
+                  <use href="./images/icon-sprite.svg#icon-linkedin"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
